<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alumnedam.practica1.Principal.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/tvNombre"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:id="@+id/etNombre"
        android:hint="Introduce tu nombre" />

    <TextView
        android:text="@string/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:id="@+id/tvNombre"
        android:layout_alignBaseline="@+id/etNombre"
        android:layout_alignBottom="@+id/etNombre"
        android:layout_alignParentStart="true" />


    <EditText
    android:id="@+id/etxt_fromdate"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight=".5"
    android:hint="@string/from_date" />

    <TextView
        android:text="@string/vicios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvVicios"
        android:layout_above="@+id/cbMujHom"
        android:layout_alignStart="@+id/tvNombre" />

    <Button
        android:text="@string/cuando_voy_a_morir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCalcula"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/etNombre"
        android:layout_marginBottom="67dp" />

    <CheckBox
        android:text="@string/alcohol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbAlcohol"
        android:layout_below="@+id/etxt_fromdate"
        android:layout_alignStart="@+id/cbMujHom"
        android:layout_marginTop="69dp" />

    <RadioGroup android:id="@+id/GrbGrupo1"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:checkedButton="@+id/rdMujer"
        android:layout_above="@+id/cbAlcohol"
        android:layout_alignStart="@+id/etEdad">

        <RadioButton
        android:text="@string/hombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rbHombre"
        android:layout_alignBaseline="@+id/tvSexo"
        android:layout_alignBottom="@+id/tvSexo"
        android:layout_alignStart="@+id/etEdad"
        android:checked="false"
        android:duplicateParentState="false" />

        <RadioButton
            android:text="@string/mujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdMujer"
            android:layout_below="@+id/tvEdad"
            android:layout_toEndOf="@+id/GrbGrupo1"
            android:layout_weight="1" />
    </RadioGroup>

    <TextView
        android:text="@string/sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSexo"
        android:layout_alignTop="@+id/GrbGrupo1"
        android:layout_alignEnd="@+id/tvVicios" />

    <CheckBox
        android:text="Drogas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbDrogas"
        android:layout_alignBottom="@+id/cbAlcohol"
        android:layout_alignStart="@+id/cbAlcohol"
        android:layout_marginBottom="28dp" />

    <CheckBox
        android:text="@string/mujeres_hombres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbMujHom"
        android:layout_below="@+id/cbAlcohol"
        android:layout_alignEnd="@+id/GrbGrupo1" />

    <TextView
        android:text="@string/edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEdad"
        android:hint="Introduce tu edad"
        android:layout_alignBaseline="@+id/etxt_fromdate"
        android:layout_alignBottom="@+id/etxt_fromdate"
        android:layout_alignStart="@+id/tvNombre"
        android:layout_toStartOf="@+id/etNombre" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_alignBottom="@+id/tvEdad"
        android:layout_alignEnd="@+id/etNombre"
        android:layout_marginBottom="19dp"
        android:hint="Ex: 20 años"
        android:id="@+id/etEdad" />

</RelativeLayout>
